--- a/cadastro.html
+++ b/cadastro.html
@@ -1,28 +1,30 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cadastro de Livros</title>
     <link rel="stylesheet" href="estilos.css">
-    </head>
-    <body>
-        <header>
-            <h1>Livraria Fantástica</h1>
-            <nav>
-                <ul>
-                    <li><a href="index.html">Início</a></li>
-                    <li><a href="#">Livros</a></li>
-                    <li><a href="#">Autores</a></li>
-                    <li><a href="#">Contato</a></li>
-                    <li><a href="cadastro.html">Cadastro</a></li>
-                </ul>
-            </nav>
-        </header>
+</head>
 
-        <main>
-            <section class="container">
-               <form>
+<body>
+    <header>
+        <h1>Livraria Fantástica</h1>
+        <nav>
+            <ul>
+                <li><a href="index.html">Início</a></li>
+                <li><a href="#">Livros</a></li>
+                <li><a href="#">Autores</a></li>
+                <li><a href="#">Contato</a></li>
+                <li><a href="cadastro.html">Cadastro</a></li>
+            </ul>
+        </nav>
+    </header>
+
+    <main>
+        <section class="container">
+            <form>
                 <fieldset>
                     <legend>Cadastro de Livros</legend>
 
@@ -64,7 +66,8 @@
 
                     <div class="input-container">
                         <label for="isbn">ISBN</label>
-                        <input type="text" name="isbn" id="isbn" placeholder="ISBN do livro" pattern="\d{3}-\d{10}" required>
+                        <input type="text" name="isbn" id="isbn" placeholder="ISBN do livro" pattern="\d{3}-\d{10}"
+                            required>
                     </div>
 
                     <div class="input-container">
@@ -122,14 +125,14 @@
                         <button type="submit">Cadastrar</button>
                         <button type="reset">Limpar</button>
                     </div>
-            
+
                 </fieldset>
-               </form> 
-            </section>
-        </main>
-        <footer>
-            <p>&copy; 2023 Livraria Fantástica | Criado por Amanda Vitória</p>
-        </footer>
-    </body>
+            </form>
+        </section>
+    </main>
+    <footer>
+        <p>&copy; 2023 Livraria Fantástica | Criado por Amanda Vitória</p>
+    </footer>
+</body>
 
 </html>
